--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "multiple_language",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "Multiple language by Tùng Duy",
   "main": "index.js",
   "scripts": {
@@ -19,6 +19,7 @@
     "tungduy",
     "multi language",
     "multiple-language",
+    "multi-language",
     "helper",
     "Helper for backend",
     "javascript",
